styles/main.css
/* RESET */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    
}

/* Typography */

html, body {
    font-family: 'Helvetica', sans-serif;
    font-weight: 400;
    font-size: 14px;
    line-height: 1.3;
    
}

h1  {
    font-family: 'Lato', sans-serif;
    font-weight: 700;
    font-size: 3.8rem;
    line-height: 1.2;
}

h2  {
    font-family: 'Lato', sans-serif;
    font-weight: 600;
    font-size: 2.2rem;
}

h5  {
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    font-size: 0.9rem;
    line-height: 3;
}

/* Logo */

.left-side a .logo {
    max-height: 1.2rem;
    vertical-align: text-bottom;

}

/* Menu */

.fixed-menu {
    width: 100%;
    position: fixed;
    top: 0;
    z-index: 2;
}

.menu {
    width: 100%;
    height: 3.2rem;
    background-color: white;
    padding: 0 1rem;
}

.menu ul {
    list-style: none;
    font-weight: 400;
    display: inline-block;
    
}

.menu ul li {
    display: inline-block;
    margin-left: 2rem;
}

li a {
    text-decoration: none;
    color: #1e1919;
    line-height: 3rem;
    display: inline-block; 
     
}

li a:hover {
    border-bottom:0.2rem solid #056CF2 ;
}

.right-side {
    float: right;
}

.left-side {
    float: left;
}

/* Clearfix */

.clearfix {
    content: '';
    display: table;
    clear: both;
}

/* Utility Classes */

.add-margin-left {
    margin-left: 2rem;
}

.white-space {
    width: auto;
    height: 1.5rem;
}

.white-space-long {
    width: auto;
    height: 50px;
}

/* Button */

button {
    background-color: #0261FF;
    color: white;
    border: none;
    padding: 0.4rem 1rem;
    font-size: .7rem;
    cursor: pointer;
    
}

button:hover {
    filter: grayscale(0.5);
}

.right-side .button {
    display: inline-block;
}

/* Hero Section */

.hero {
    width: 100%;
    background-color: #B4D0E6; 
}

.container-80 {
    padding-top: 10rem;
    max-width: 80%;
    margin: 0 auto;
    position: relative;
}

.hero-sub {
    margin-top: 2rem;
    max-width: 30%;
}

.hero-sub button {
    margin: 1.4rem 0 .5rem;
}

.hero-icon {
    padding: 0.6rem 0 3rem;
}

.hero-icon i {
    font-size: 3rem;
}

.hero-image {
    position: absolute;
    bottom: -10%;
    left: 33%;
    /* bottom: 240px;
    left: 450px; */
}

.hero-image img {
    max-width: 600px;
    filter: drop-shadow(0 1rem 1rem rgba(0, 0, 0, 0.40));
}

/* Main Container */

.container-70 {
    max-width: 70%;
    min-width: 500px;
    margin: 10rem auto 3rem;
}

/* Artificial Radio Button */

.artificial-radio-holder {
    margin: 1.5rem 0 1rem;
}

.arb {
    width: 1.2rem;
    height: 1.2rem;
    border: .3rem solid #0261FF;
    border-radius: 50%;
    display: inline-block;
    vertical-align: middle;
    margin-right: 0.3rem;
}

.senza-bordini {
    border: 0.1rem solid rgb(201, 201, 201);
    margin-left: 1rem; 
}

a .arb:hover {
    border: .3rem solid #0261FF;
}

/* Table Content */

.table-content-holder {
    width: 100%;
}

.collumn {
    width: calc(100% / 3 - 4rem / 3);
    height: 140vh;
    float: left;
    border: 1px solid rgb(201, 201, 201);
}

.collumn:nth-child(3n + 2) {
    margin: 0 2rem;
}

.collumn h5 {
    display: inline;
}

.collumn .table-header span {
    font-size: 1.3rem;
    vertical-align: middle;
    margin-right: 0.2rem;
}

.collumn .table-mini-container .line-text {
    margin: 1rem 0;
    word-spacing: initial;
}

.inline-block {
    display: inline-block;
}

.table-header {
    width: 100%;
    border-bottom: 1px solid rgb(201, 201, 201);
    text-align: center;
}

.table-mini-container {
    width: 80%;
    margin: 0 auto;
}



/* Table Button, a , utility.css */
.button-full button {
    width: 100%;
}

.collumn .table-mini-container .line-text a {
    color: #0261FF;
}

.break-line {
    width: 15%;
    height: 1px;
    background-color: rgb(187, 187, 187);
    margin: 2rem 0;
}


/* Table Ul design */

.collumn .table-mini-container ul {
    list-style-image: url(../img/check.svg);
    list-style-position: inside;
    margin: 0;
    padding: 0;
}

.collumn .table-mini-container ul li {
    margin: 1rem 0;

}

.container-70 .full {
    width: 100%;
    height: auto;
    margin-top: 3rem;
}

.container-70 .full .table-mini-container {
    width: 95%;
}

.full-table-left {
    width: 66%;
    float: left;
}

.full-table-right {
    width: calc(100% - 66% - 0.9rem);
    float: right;
}

